# stonelang

./: CMakeLists.txt  LICENSE  NOTES.txt  README.md
cmake/caches/: README.txt
cmake/modules/: AddFormat.cmake  AddInit.cmake  AddStone.cmake  CMakeLists.txt  StoneFmt.cmake  StoneInstall.cmake  StoneLang.cmake
include/: CMakeLists.txt
include/stone/: CMakeLists.txt
include/stone/AST/: AST.h  ASTAllocation.h  ASTBuilder.h  ASTContext.h  ASTFile.h  ASTMemory.h  ASTScope.h  ASTSession.h  ASTUnit.def  ASTUnit.h  ASTVisitor.h  ASTWalker.h  Alignments.h  AllDiagnosticKind.td  Allocation.h  Any.h  Artifact.def  Artifact.h  Attribute.h  BuiltinIdentifiers.def  BuiltinTypeTag.def  ClangImporter.h  Decl.h  DeclBuilder.h  DeclContext.h  DeclEvaluator.h  DeclFlight.h  DeclInfluencer.h  DeclInfluencerKind.h  DeclInfluencerNode.def  DeclKind.h  DeclLogic.h  DeclName.h  DeclNode.def  DeclState.h  DiagnosticBasicKind.h  DiagnosticClient.h  DiagnosticEmitter.h  DiagnosticEngine.h  DiagnosticID.h  (+73 more)
include/stone/Basic/: LangStandards.def  SourceLocation.h
include/stone/CodeGen/: CodeGenInstance.h  CodeGenModule.h  CodeGenObserver.h  CodeGenPasses.h  CodeGeneration.h  CodePasses.h
include/stone/Compile/: Compile.h  Compiling.h  Frontend.h  FrontendMemoryBuffers.h  FrontendModule.h  FrontendObservation.h  FrontendObserver.h  FrontendOptions.h
include/stone/Config/: config.h.cmake
include/stone/Core/: About.h  Action.def  Algorithm.h  CharInfo.h  CodeGenOptions.h  Debug.h  DebugMacros.h  Defer.h  DiagCore.def  DiagDef.h  DiagEngine.def  DiagEngine.h  DiagID.h  DiagTable.def  DiagnosticMacros.h  DiagnosticOptions.h  Diagnostics.def  DiagnosticsCodeGen.def  DiagnosticsCore.def  EditorPlaceholder.h  Features.h  FileSystem.h  FileSystemStatCache.h  FileType.def  FileType.h  FixItCore.def  FixItID.h  Help.h  LLVM.h  LLVMInit.h  LangOptions.h  Lexing.h  Options.h  OutputPaths.h  Platform.h  PrettyStackTrace.h  Range.h  SrcLoc.h  SrcMgr.h  SrcUnit.h  (+5 more)
include/stone/Diag/: DiagArtifact.h  DiagEngine.h  DiagFlight.h  DiagID.def  DiagID.h  DiagOut.h  FixItFlight.h  FixItID.h
include/stone/Driver/: Driver.h  Run.h
include/stone/Frontend/: Frontend.h  FrontendInputFile.h  FrontendInstance.h  FrontendInvocation.h  FrontendMemoryBuffers.h  FrontendModule.h  FrontendObservation.h  FrontendObserver.h  FrontendOptions.h  FrontendSpace.h
include/stone/LLVM/: LLVMCodeGenModule.h  LLVMCodeGenObserver.h
include/stone/Lang/: About.h  CodeGenOptions.h  Debug.h  Defer.h  DiagnosticOptions.h  EditorPlaceholder.h  FileSystem.h  FileSystemStatCache.h  FileType.h  Help.h  InputFile.h  LLVM.h  LLVMInit.h  LangOptions.h  Mode.def  Token.h  (+6 more)
lib/: CMakeLists.txt
lib/AST/: AST.cpp  ASTBuilder.cpp  ASTContext.cpp  ASTFile.cpp  ASTSession.cpp  ASTUnit.cpp  Artifact.cpp  CMakeLists.txt  Decl.cpp  DeclBuilder.cpp  DeclContext.cpp  DeclEvaluator.cpp  DeclFlight.cpp  DeclState.cpp  DiagnosticEngine.cpp  DiagnosticID.cpp  Diagnostics.cpp  Evaluator.cpp  EvaluatorEngine.cpp  Expr.cpp  ExprBuilder.cpp  File.cpp  Identifier.cpp  Logic.cpp  Module.cpp  ModuleContext.cpp  ModuleDecl.cpp  ModuleFile.cpp  Node.cpp  Scaffolder.cpp  Scope.cpp  SourceFile.cpp  Space.cpp  Stmt.cpp  StmtBuilder.cpp  Type.cpp  TypeBuilder.cpp  TypeChecker.cpp  TypeChecking.cpp  TypeFlight.cpp  (+2 more)
lib/Basic/: CMakeLists.txt  SourceLocation.cpp
lib/CodeGen/: CMakeLists.txt  CodeGenPasses.cpp  CodePasses.cpp
lib/Compile/: CMakeLists.txt  CMakeListst.txt  Compile.cpp  Compiling.cpp  Frontend.cpp  FrontendArgStrings.cpp  FrontendModule.cpp  FrontendOptions.cpp
lib/Core/: About.cpp  Algorithm.cpp  CMakeLists.txt  CharInfo.cpp  DiagEngine.cpp  EditorPlaceholder.cpp  FileSystem.cpp  FileSystemStatCache.cpp  FileType.cpp  FixItID.cpp  Help.cpp  LangOptions.cpp  Options.cpp  Platform.cpp  SrcMgr.cpp  SrcUnit.cpp  Unicode.cpp  Version.cpp
lib/Diag/: CMakeLists.txt  DiagFlight.cpp  DiagID.cpp  DiagTable.cpp  FixItFlight.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp  Run.cpp
lib/Frontend/: CMakeLists.txt  Frontend.cpp  FrontendAction.cpp  FrontendArgList.cpp  FrontendArgStrings.cpp  FrontendInstance.cpp  FrontendInvocation.cpp  FrontendModule.cpp  FrontendOptions.cpp  FrontendSpace.cpp
lib/LLVM/: CMakeLists.txt
lib/Lang/: About.cpp  CMakeLists.txt  FileSystem.cpp  FileSystemStatCache.cpp  Help.cpp  InputFile.cpp  LangOptions.cpp  Platform.cpp  SrcMgr.cpp  Version.cpp
lib/Lex/: CMakeLists.txt  Confusable.cpp  Lexer.cpp
lib/Option/: CMakeLists.txt  Help.cpp  LangOptions.cpp  Options.cpp
lib/Parse/: CMakeLists.txt  Lexer.cpp  ParseDecl.cpp  Parser.cpp
lib/Support/: About.cpp  Algorithm.cpp  CMakeLists.txt  EditorPlaceholder.cpp  FileSystem.cpp  FileSystemStatCache.cpp  FileType.cpp  Help.cpp  InputFile.cpp  LangOptions.cpp  Options.cpp  Platform.cpp  RISCVVIntrinsicUtils.cpp  SrcMgr.cpp  Version.cpp
scripts/: setup-project.sh
tests/syntax/: alias.stone  any.stone  auto.stone  const.stone  continue.stone  ctor.stone  defer.stone  dtor.stone  for.stone  fun.stone  fut.stone  interface.stone  match.stone  ptr.stone  pure.stone  seal.stone  some.stone  space.stone  template.stone  ternary.stone  test.stone  trust.stone  using.stone  virtual.stone  visibility.stone  with.stone
tools/: CMakeLists.txt
tools/compile/: CMakeLists.txt  main.cpp
tools/driver/: CMakeLists.txt
tools/frontend/: CMakeLists.txt  main.cpp
tools/stone/: CMakeLists.txt  main.cpp
tools/stonec/: CMakeLists.txt  main.cpp
tools/stonef/: CMakeLists.txt  main.cpp
utils/TableGen/: ASTTableGen.cpp  ASTTableGen.h  CMakeLists.txt  ClangASTNodesEmitter.cpp  ClangASTPropertiesEmitter.cpp  ClangAttrEmitter.cpp  ClangBuiltinsEmitter.cpp  ClangCommentCommandInfoEmitter.cpp  ClangCommentHTMLNamedCharacterReferenceEmitter.cpp  ClangCommentHTMLTagsEmitter.cpp  ClangDataCollectorsEmitter.cpp  ClangDiagnosticsEmitter.cpp  ClangOpcodesEmitter.cpp  ClangOpenCLBuiltinEmitter.cpp  ClangOptionDocEmitter.cpp  ClangSACheckersEmitter.cpp  ClangSyntaxEmitter.cpp  ClangTypeNodesEmitter.cpp  MveEmitter.cpp  NeonEmitter.cpp  RISCVVEmitter.cpp  SveEmitter.cpp  TableGen.cpp  TableGenBackends.h
(+66 files in other folders)
